# multi_cloud_registration

./: .gitignore  CMakeLists.txt
include/: App.h  CameraId.hpp  KeypointSorter.hpp  Logger.h  Palette.hpp  QRDetector.h  SquareDetector.h  ThreadedViewer.hpp  Timer.h  Viewer.h  ViewerNode.h  ViewerNodeThreaded.hpp
src/: App.cpp  KeypointSorter.cpp  Logger.cpp  QRDetector.cpp  SquareDetector.cpp  main.cpp
